[tool.poetry]
name = "django-x"
version = "0.1.0"
description = ""
authors = ["farahzuot <farahz997@eng.hu.edu.jo>"]

[tool.poetry.dependencies]
python = "^3.9"
django-crispy-forms = "^1.12.0"
django-debug-toolbar = "^3.2.1"
django-allauth = "^0.44.0"
Django = "^3.2.4"
whitenoise = "^5.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
